--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +41,7 @@ dependencies:
   firebase_storage: ^11.5.6
   image_picker: ^1.0.5
   cloud_firestore: ^4.13.6
+  flutter_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
